--- a/BaiTapLon/css/index.css
+++ b/BaiTapLon/css/index.css
@@ -42,13 +42,6 @@ nav ul li, a{
     /* line-height: 40px; */
 }
 
-/* nav ul li{
-    border: 1px solid red;
-    height: 46px;
-    margin-top: 7px;
-} */
-
-
 nav ul li:nth-child(1) a{
     font-size: 40px;
     margin-left: -30px;
@@ -118,33 +111,6 @@ nav ul li:nth-child(4) button:hover {
     margin-top: 10px;
     /* line-height: 46px; */
 }
-
-
-/* nav ul li:nth-child(5) a:hover {
-    color: black;
-    background: white;
-
-}
-nav ul li:nth-child(6) a:hover {
-    color: black;
-    background: white;
-
-}
-nav ul li:nth-child(7) a:hover {
-    color: black;
-    background: white;
-
-}
-nav ul li:nth-child(8) a:hover {
-    color: black;
-    background: white;
-
-}
-nav ul li:nth-child(9) a:hover {
-    color: black;
-    background: white; 
-
-}*/
 .modal-content{
     box-shadow: 0px 0px 15px 2px rgba(255,255,255,0.5);
     color: white;
@@ -246,7 +212,9 @@ nav ul li:nth-child(9) a:hover {
     border: none;
     
 }
-
+.sup-menu {
+    z-index: 999;
+}
 
 /* ....................section........................ */
 
@@ -307,7 +275,7 @@ section>img{
 }
 
 .khunggt{
-    height: 865px;
+    height: 100%;
     margin: 0 auto;
     width: 100%;
     background: #FED101;
@@ -326,15 +294,17 @@ section>img{
 .rowgt img{
     margin-left: 10px;
     margin-top: 10px;
-    width: 120px;
-    height: 120px;
+    width: 180px;
+    height: 180px;
     margin-bottom: 5px;
 }
 
 .anhsec{
+    text-align: center;
     margin-right: 5px;
     border: 1px solid rgb(226, 223, 223);
-    height: 280px;
+    height: 300px;
+    width: 250px;
     border-radius: 7px;
     margin-top: 0.1px;
     transition: transform 0.1s;
